[package]
name = "actions"
version = "0.1.0"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
burst-communication-middleware = { path = "../burst-communication-middleware", features = ["redis"] }
log = "0.4.20"
env_logger = "0.9.3"
tokio = { version = "1.45.0", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3"
anyhow = "1.0"
bytes = "1.5.0"
ahash = "0.8"
aws-sdk-s3 = { version = "1.84.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.3", features = ["hardcoded-credentials"] }
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[lib]
name = "actions"
path = "src/lib.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"
